dev/deployment-chatbot-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-be
  namespace: dev
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-be
  template:
    metadata:
      labels:
        app: chatbot-be
        vers: "2"
    spec:
      containers:
      - name: chatbot-be
        image: 026090511617.dkr.ecr.us-east-2.amazonaws.com/mindlab-dev:chatbot-api-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
      imagePullSecrets:
      - name: ecr-secret
