dev/deployment_landing_fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-fe
  namespace: dev
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: landing-fe
  template:
    metadata:
      labels:
        app: landing-fe
        vers: "2"
    spec:
      containers:
      - name: landing-fe
        image: 026090511617.dkr.ecr.us-east-2.amazonaws.com/mindlab-dev:landing-page-fe-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: ecr-secret
