dev/deployment_landing_be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-be
  namespace: dev
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: landing-be
  template:
    metadata:
      labels:
        app: landing-be
        vers: "1"
    spec:
      containers:
        - name: landing-be
          image: 026090511617.dkr.ecr.us-east-2.amazonaws.com/mindlab-dev:landing-page-be-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 1337
      imagePullSecrets:
        - name: ecr-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-db
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-db
  template:
    metadata:
      labels:
        app: landing-db
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data/pgdata
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: landing-db-pvc-dev
---
apiVersion: v1
kind: Service
metadata:
  name: landing-db
  namespace: dev
spec:
  selector:
    app: landing-db
  ports:
    - port: 5432
      targetPort: 5432
