dev/nlb-chatbot-be.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-api-nlb
  namespace: dev
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  selector:
    app: chatbot-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: LoadBalancer
