dev/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-be-svc
  namespace: dev
spec:
  selector:
    app: chatbot-be
  ports:
    - name: chatbot-be
      protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-fe-svc
  namespace: dev
spec:
  selector:
    app: chatbot-fe
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 3005
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: landing-fe-svc
  namespace: dev
spec:
  selector:
    app: landing-fe
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: landing-be-svc
  namespace: dev
spec:
  selector:
    app: landing-be
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 1337
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: dev
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
